--- a/assets/css/style-editor.css
+++ b/assets/css/style-editor.css
@@ -571,16 +571,16 @@ a:hover {
 /**
  * Block Options
  */
-.wp-block.wp-block-buttons {
+[data-block].wp-block-buttons {
 	margin-top: 0;
 	margin-bottom: 0;
 }
 
-.wp-block.wp-block-buttons .wp-block-button:first-child {
+[data-block].wp-block-buttons .wp-block-button:first-child {
 	margin-top: var(--global--spacing-vertical);
 }
 
-.wp-block.wp-block-buttons .wp-block-button:last-child {
+[data-block].wp-block-buttons .wp-block-button:last-child {
 	margin-bottom: var(--global--spacing-vertical);
 }
 
